TEST_PROGRAMS/INVALID/scott_cooper/invalid_assign.min
# Scott Cooper
# 260503452
# COMP520 - Winter 2016
#
# Should only be able to assign to an identifier
"hello" = 1;

